--- a/FlycoTabLayout_Lib/build.gradle
+++ b/FlycoTabLayout_Lib/build.gradle
@@ -5,12 +5,10 @@ apply plugin: 'com.android.library'
 // 这个version是区分library版本的，因此当我们需要更新library时记得修改这个version
 version = "2.1.2"
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.1"
-
+    compileSdkVersion rootProject.ext.compileSdkVersion
     defaultConfig {
-        minSdkVersion 11
-        targetSdkVersion 25
+        minSdkVersion rootProject.ext.minSdkVersion
+        targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 212
         versionName version
     }
@@ -24,7 +22,8 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:support-v4:25.1.0'
+    implementation rootProject.ext.appcompatv7
+    implementation rootProject.ext.supportDesign
 }
 
 //def siteUrl = 'https://github.com/H07000223'  // 项目的主页
