--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
         <activity
             android:name=".ui.SegmentTabActivity"
             android:screenOrientation="portrait"/>
+        <activity android:name=".ui.SlidingTabTestActivity" />
 
     </application>
 
